--- a/package.json
+++ b/package.json
@@ -1,85 +1,73 @@
 {
-  "name": "react-custom-roulette",
-  "version": "1.4.1",
-  "description": "Customizable React roulette wheel with spinning animation",
+  "name": "casino-style-custom-roulette",
+  "version": "1.4.2",
+  "description": "Customizable React roulette wheel with spinning animation – React 19 compatible fork",
   "main": "./dist/bundle.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/bundle.js"
+      }
+    }
+  },
+  "license": "MIT",
+  "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/effectussoftware/react-custom-roulette"
+    "url": "https://github.com/YOUR_USERNAME/casino-style-custom-roulette"
   },
   "keywords": [
     "react",
-    "custom",
     "roulette",
+    "casino",
     "spinning",
     "wheel",
     "fortune",
+    "game",
     "prize"
   ],
-  "license": "MIT",
-  "types": "./dist/index.d.ts",
-  "private": false,
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "styled-components": "^6.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.0.6",
-    "@testing-library/user-event": "^11.0.0",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.9",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "8.1.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.21.0",
-    "eslint-config-airbnb-typescript-prettier": "^2.1.1",
-    "eslint-plugin-react": "^7.22.0",
-    "husky": "^4.2.5",
-    "jest-canvas-mock": "^2.2.0",
-    "prettier": "^2.0.5",
-    "react-scripts": "^4.0.3",
-    "styled-components": "^5.1.1",
-    "ts-loader": "8.0.7",
-    "typescript": "^4.6.2",
-    "url-loader": "^4.1.0",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "babel-loader": "^9.1.3",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "prettier": "^3.2.0",
+    "schema-utils": "^4.3.3",
+    "styled-components": "^6.1.0",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
+    "url-loader": "^4.1.1",
     "webfontloader": "^1.6.28",
-    "webpack": "4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "3.11.1"
+    "webpack": "^5.102.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "scripts": {
-    "start-server": "react-scripts start",
-    "start": "webpack --watch",
-    "build": "webpack && tsc && cp -R ./src/assets ./dist",
-    "test": "react-scripts test",
-    "coverage": "CI=true npm test -- --env=jsdom --coverage",
-    "eject": "react-scripts eject",
+    "start": "webpack serve --mode development --open",
+    "build": "webpack && tsc && xcopy src\\assets dist\\assets /E /I /Y",
+    "watch": "webpack --watch",
     "format": "prettier --write src/**/*.{js,ts,tsx}",
-    "lint": "eslint src/**/*.{js,ts,tsx}",
-    "link-react": "cd example/node_modules/react && yarn link && cd ../react-dom && yarn link && cd ../../.. && yarn link react react-dom"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format && yarn lint"
-    }
-  },
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "src/serviceWorker.ts"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "lint": "eslint src/**/*.{js,ts,tsx}"
   },
   "browserslist": {
     "production": [
