--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "casino-style-custom-roulette",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "Customizable React roulette wheel with spinning animation – React 19 compatible fork",
   "main": "./dist/bundle.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": ["dist"],
   "sideEffects": false,
   "exports": {
     ".": {
